syntax = "proto3";

package user;

service UserService {
  rpc GetUserById (UserByIdRequest) returns (UserResponse) {}
  rpc GetUserByEmail (UserByEmailRequest) returns (UserResponse) {}
}

message UserByIdRequest {
  string id = 1;
}

message UserByEmailRequest {
  string email = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  bool isActive = 5;
  string createdAt = 6;
  string updatedAt = 7;
} 